[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "okx-contract-signal-system"
version = "3.8.0"
description = "Local OKX contract backtest and semi-automatic signal system"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "pyyaml",
  "requests",
  "websocket-client",
  "plotly",
  "streamlit",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
