[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "okx-contract-signal-system"
version = "3.56.9"
description = "Local OKX signal observation, backtest, and manual review platform"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "pyyaml",
  "requests",
  "websocket-client",
  "plotly",
  "streamlit",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: tests that require local historical market data via JIAOYI_DATA_DIR",
]
